Münze zerstört aber Pacman stoppt

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\CameraFollow.cs" />
      <Compile Include="Assets\Scripts\CoinCollector.cs" />
+     <Compile Include="Assets\Scripts\GhostBlue.cs" />
      <Compile Include="Assets\Scripts\Münze.cs" />
      <Compile Include="Assets\Scripts\PacMan.cs" />
  <Reference Include="Unity.TextMeshPro.Editor">
